--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <! script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></! script> 
     <script src="https://use.fontawesome.com/e21995c23e.js"></script>
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Catty Music</title>
   </head>
   <body>
